--- a/algorithm.vcxproj
+++ b/algorithm.vcxproj
@@ -141,8 +141,8 @@
   <ItemGroup>
     <ClCompile Include="algorithm.cpp" />
     <ClCompile Include="algorithm.h" />
-    <ClCompile Include="bubble.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="sort\bubble.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
