--- a/algorithm.vcxproj.filters
+++ b/algorithm.vcxproj.filters
@@ -5,6 +5,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="src\sort">
+      <UniqueIdentifier>{08711e71-beb8-49c8-94ab-45c510487766}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -13,11 +16,11 @@
     <ClCompile Include="algorithm.h">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="bubble.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="algorithm.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="sort\bubble.cpp">
+      <Filter>src\sort</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
