--- a/algorithm.vcxproj
+++ b/algorithm.vcxproj
@@ -30,7 +30,9 @@
     <ClInclude Include="src\sort\sort_entrance.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitignore" />
     <None Include="makefile" />
+    <None Include="README.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
