--- a/algorithm.vcxproj
+++ b/algorithm.vcxproj
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\algorithm.h" />
+    <ClInclude Include="src\data\integer_range.h" />
     <ClInclude Include="src\data\slist.h" />
     <ClInclude Include="src\sort\sort_entrance.h" />
   </ItemGroup>
