--- a/algorithm.vcxproj
+++ b/algorithm.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\algorithm.cpp" />
+    <ClCompile Include="src\data\binary_tree.cpp" />
     <ClCompile Include="src\data\slist.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\sort\bubble.cpp" />
@@ -29,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\algorithm.h" />
+    <ClInclude Include="src\data\binary_tree.h" />
     <ClInclude Include="src\data\integer_range.h" />
     <ClInclude Include="src\data\slist.h" />
     <ClInclude Include="src\sort\sort_entrance.h" />
