--- a/algorithm.vcxproj
+++ b/algorithm.vcxproj
@@ -29,8 +29,10 @@
     <ClCompile Include="src\sort\sort.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\3rd\portable_endian.h" />
     <ClInclude Include="src\algorithm.h" />
     <ClInclude Include="src\data\binary_tree.h" />
+    <ClInclude Include="src\data\byte_order.h" />
     <ClInclude Include="src\data\integer_range.h" />
     <ClInclude Include="src\data\slist.h" />
     <ClInclude Include="src\sort\sort.h" />
