--- a/algorithm.vcxproj.filters
+++ b/algorithm.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="src\3rd\portable_endian.h">
       <Filter>src\3rd</Filter>
     </ClInclude>
+    <ClInclude Include="src\data\rb_tree.h">
+      <Filter>src\data</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="makefile" />
