--- a/algorithm.vcxproj.filters
+++ b/algorithm.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="src\data\rb_tree.h">
       <Filter>src\data</Filter>
     </ClInclude>
+    <ClInclude Include="src\data\avl_tree.h">
+      <Filter>src\data</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="makefile" />
